# rustfit

./: .gitignore  Cargo.toml
examples/: mean.rs  mean_parallel.rs
samples/: randombytes.fit  sample01.fit
src/: crc.rs  errors.rs  lib.rs  message.rs  parser.rs  timestamp.rs  types.rs
