[package]
name = "rustfit"
version = "0.1.0"
authors = ["fe5aeb1f <14987462+fe5aeb1f@users.noreply.github.com>"]
description = "A fast, low-level parser library for Garmin's .FIT format"
repository = "https://github.com/fe5aeb1f/rustfit.git"
publish = false

[dependencies]
nom = "^6"
wasm-bindgen = "0.2"

[dev-dependencies]
chrono = "0.4"
rayon = "1.5.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true